Add utils and neutral-darker

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -7,6 +7,7 @@ $brand-gray-dk: #BBBBBB !default;
 $brand-neutral: #647A8A !default; // awkward light blue
 // used for sidebar, darkbg, etc
 $brand-neutral-dk: #19273F !default; // a touch of dark blue
+$brand-neutral-dker: #0B121F !default;
 
 // color variations
 $brand-blue: #4684BF !default;
