Add Proxima Nova stylesheet utils. Add Typekit script.

--- a/styles/base/scaffold.scss
+++ b/styles/base/scaffold.scss
@@ -10,5 +10,5 @@ body {
   background: $gray;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  @include oxygen;
+  @include proxima;
 }
