--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@
 @include "components/badge";
 @include "components/nav";
 @include "components/breadcrumbs";
+@include "components/list-group";
 @include "components/panel";
 @include "components/hero";
 @include "components/dropdown";
