--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 @include "base/scaffold";
 
 @include "components/button";
+@include "components/alert";
 @include "components/label";
 @include "components/badge";
 @include "components/nav";
