Fix typo (@include to @import)

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,21 +1,21 @@
-@include "vendor/normalize";
-@include "variables";
-@include "colors";
+@import "vendor/normalize";
+@import "variables";
+@import "colors";
 
-@include "base/type";
-@include "base/grid";
-@include "base/form";
-@include "base/table";
-@include "base/scaffold";
+@import "base/type";
+@import "base/grid";
+@import "base/form";
+@import "base/table";
+@import "base/scaffold";
 
-@include "components/button";
-@include "components/alert";
-@include "components/label";
-@include "components/badge";
-@include "components/nav";
-@include "components/breadcrumbs";
-@include "components/list-group";
-@include "components/panel";
-@include "components/hero";
-@include "components/dropdown";
-@include "components/tooltip";
+@import "components/button";
+@import "components/alert";
+@import "components/label";
+@import "components/badge";
+@import "components/nav";
+@import "components/breadcrumbs";
+@import "components/list-group";
+@import "components/panel";
+@import "components/hero";
+@import "components/dropdown";
+@import "components/tooltip";
