--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,5 +1,6 @@
 // neutral
-$brand-black: #4A4A4A !default;
+$brand-white: #fff !default;
+$brand-black: #4A4A4A !default; // text color, etc
 $brand-gray: #C4C4C4 !default;
 $brand-gray-lt: #DEDEDE !default;
 $brand-gray-dk: #BBBBBB !default;
