--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,5 +9,5 @@ $big: 36px;
 $allowance: 30px;
 $allowance-wide: 50px;
 
-$border-radius: 3px;
+$border-radius-base: 3px;
 $border-radius-rounded: 25px;
