--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -4,7 +4,7 @@
 @import "colors";
 
 @import "base/type";
-@import "base/grid";
+@import "base/layout";
 @import "base/form";
 @import "base/table";
 @import "base/scaffold";
