--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,29 @@
+// grid-related stuff
+// [locked]
+$grid-columns: 12 !default;
+$grid-gutter: 10px !default; // space between each column
+// https://github.com/twbs/bootstrap/blob/v4-dev/scss/mixins/_grid-framework.scss
+$grid-breakpoints: (
+  xs: 0, // Extra small screen / phone
+  sm: 34em, // Small screen / phone
+  md: 48em, // Medium screen / tablet
+  lg: 62em, // Large screen / desktop
+  xl: 75em// Extra large screen / wide desktop
+) !default;
+$container-max-widths: (
+  sm: 34rem,    // 480
+  md: 45rem,    // 720
+  lg: 60rem,    // 960
+  xl: 72.25rem  // 1140
+) !default;
+
+// type base
 $font-size-base: 14px !default;
 $line-height-base: 1.7 !default;
+
+// etc base
+$border-radius-base: 3px;
+$border-radius-rounded: 25px;
 
 $tiny: 18px;
 $small: 24px;
@@ -8,6 +32,3 @@ $big: 36px;
 
 $allowance: 30px;
 $allowance-wide: 50px;
-
-$border-radius-base: 3px;
-$border-radius-rounded: 25px;
