Init `button` sec content.

--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -47,7 +47,7 @@
   // the same values
   line-height: 30px;
   font-size: $font-size-base;
-  color: $brand-gray-dk;
+  color: $brand-white;
   border: 1px solid transparent;
   border-radius: $border-radius-base;
   background: $brand-gray;
