Fix crimson and sun hex

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -15,8 +15,8 @@ $brand-blue: #4684BF !default;
 // light / neutral colors
 $brand-sky: #3A569B !default; // blue
 $brand-emerald: #38D4A9 !default; // primary | gren
-$brand-sun: #38D4A9 !default; // yellow
-$brand-crimson: #38D4A9 !default; // red
+$brand-sun: #FFC05A !default; // yellow
+$brand-crimson: #F05F50 !default; // red
 // dark colors
 $brand-sky-dk: #3A569B !default;
 $brand-emerald-dk: #2EAF8B !default;
