Added hyphen on variation classes

--- a/styles/components/slate.scss
+++ b/styles/components/slate.scss
@@ -4,16 +4,16 @@
 	margin: 10px;
 	padding : 30px;
 
-	&.spacious {
+	&.-spacious {
 		padding: 100px 60px 120px;
 	}
-	&.centered-slate {
+	&.-centered-slate {
 		margin: 0px auto;
 	}
-	&.half-slate {
+	&.-half-slate {
 		width: 50%;
 	}
-	&.tidy-background {
+	&.-tidy-background {
 		background : $brand-white;
 		border-radius: 0px;
 	}
