--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -1,8 +1,25 @@
+$border-color: #ddd;
+
 .panel {
-	margin-bottom: 20px;
 	background: $brand-white;
-	border-radius: 4px;
+	border-radius: 5px;
 	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	ul { margin-top: 0; }
+	.list {
+		padding-left: 0;
+		margin-bottom: 0;
+		list-style-type: none;
+		.list-item {
+			border-width: 1px 0;
+			border-radius: 0;
+			position: relative;
+			display: block;
+			padding: 10px 15px;
+			margin-bottom: -1px;
+			background: $brand-white;
+			border: 1px solid $border-color;
+		}		
+	}
 }
 
 .panel-default {
@@ -117,5 +134,30 @@
 		border-top: 1px solid $brand-crimson;
 		border-bottom-left-radius: 3px;
 		border-bottom-right-radius: 3px;
+	}
+}
+
+.table {
+	width: 100%;
+	max-width: 100%;
+	border-spacing: 0;
+	border-collapse: collapse;
+	&:last-child {
+		border-bottom-left-radius: 3px;
+		border-bottom-right-radius: 3px;
+	}
+	th {
+		font-weight: bold;
+		vertical-align: bottom;
+		border-bottom: 2px solid $border-color;
+		padding: 8px;
+		line-height: $line-height-base;
+		text-align: left;
+	}
+	td {
+		padding: 8px;
+		vertical-align: top;
+		border-top: 1px solid $border-color;
+		line-height: $line-height-base;
 	}
 }
