--- a/styles/base/layout.scss
+++ b/styles/base/layout.scss
@@ -1,8 +1,8 @@
 @mixin make-container() {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  ($grid-gutter / 2);
-  padding-right: ($grid-gutter / 2);
+  padding-left: $grid-gutter;
+  padding-right: $grid-gutter;
   @include clearfix();
 }
 
@@ -24,8 +24,8 @@
 }
 
 .row {
-  margin-left:  ($grid-gutter / -2);
-  margin-right: ($grid-gutter / -2);
+  margin-left:  -$grid-gutter;
+  margin-right: -$grid-gutter;
 }
 
 
@@ -37,8 +37,8 @@
       width: percentage($i / $grid-columns);
       position: relative;
       min-height: 1px;
-      padding-left: ($grid-gutter / 2);
-      padding-right: ($grid-gutter / 2);
+      padding-left: $grid-gutter;
+      padding-right: $grid-gutter;
     }
   }
 }
