--- a/styles/components/alert.scss
+++ b/styles/components/alert.scss
@@ -1,3 +1,38 @@
-.alert {
-
+.alert-box {
+	padding: 20px 40px;
+	margin: 10px;
+	position: relative;
+	color: $brand-white;
+	&.-success {
+		background-color: $brand-emerald;
+	}
+	&.-info {
+		background-color : $brand-blue;
+	}
+	&.-warning { 
+		background-color : $brand-sun;
+	}
+	&.-danger {
+		background-color: $brand-crimson;
+	}
+	.dismiss-btn {
+		float: right;
+		background: transparent;
+		color: $brand-white;
+    border: 1px solid $brand-white;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+   	-webkit-transition: background,color 0.3s linear;
+   	-moz-transition: background,color 0.3s linear;
+   	-o-transition: background,color 0.3s linear;
+   	transition: background,color 0.3s linear;
+   		&:hover {
+   			background: $brand-white;
+   			color: #FFC05A;
+   		}
+  }
 }
