--- a/styles/components/panel.scss
+++ b/styles/components/panel.scss
@@ -8,8 +8,8 @@
 		color: $brand-black;
 		background: #f5f5f5;
 		border-bottom: 1px solid $brand-gray;
-		border-top-left-radius: 3px;
-		border-top-right-radius: 3px;
+		border-top-left-radius: $border-radius-base;
+		border-top-right-radius: $border-radius-base;
 	}
 
 	> .panel-body {
@@ -21,8 +21,8 @@
 		color: $brand-black;
 		background: #f5f5f5;
 		border-top: 1px solid $brand-gray;
-		border-bottom-left-radius: 3px;
-		border-bottom-right-radius: 3px;
+		border-bottom-left-radius: $border-radius-base;
+		border-bottom-right-radius: $border-radius-base;
 	}
 
 	&.-default {
@@ -36,8 +36,8 @@
 			color: $brand-white;
 			background: $brand-sky;
 			border-bottom: 1px solid $brand-sky;
-			border-top-left-radius: 3px;
-			border-top-right-radius: 3px;
+			border-top-left-radius: $border-radius-base;
+			border-top-right-radius: $border-radius-base;
 		}
 
 		> .panel-body {
@@ -49,8 +49,8 @@
 			color: $brand-white;
 			background: $brand-sky;
 			border-top: 1px solid $brand-sky;
-			border-bottom-left-radius: 3px;
-			border-bottom-right-radius: 3px;
+			border-bottom-left-radius: $border-radius-base;
+			border-bottom-right-radius: $border-radius-base;
 		}
 	}
 
@@ -61,8 +61,8 @@
 			color: $brand-white;
 			background: $brand-emerald;
 			border-bottom: 1px solid $brand-emerald;
-			border-top-left-radius: 3px;
-			border-top-right-radius: 3px;
+			border-top-left-radius: $border-radius-base;
+			border-top-right-radius: $border-radius-base;
 		}
 
 		> .panel-body {
@@ -74,8 +74,8 @@
 			color: $brand-white;
 			background: $brand-emerald;
 			border-top: 1px solid $brand-emerald;
-			border-bottom-left-radius: 3px;
-			border-bottom-right-radius: 3px;
+			border-bottom-left-radius: $border-radius-base;
+			border-bottom-right-radius: $border-radius-base;
 		}
 	}
 
@@ -86,8 +86,8 @@
 			color: $brand-white;
 			background: $brand-sun;
 			border-bottom: 1px solid $brand-sun;
-			border-top-left-radius: 3px;
-			border-top-right-radius: 3px;
+			border-top-left-radius: $border-radius-base;
+			border-top-right-radius: $border-radius-base;
 		}
 
 		> .panel-body {
@@ -99,8 +99,8 @@
 			color: $brand-white;
 			background: $brand-sun;
 			border-top: 1px solid $brand-sun;
-			border-bottom-left-radius: 3px;
-			border-bottom-right-radius: 3px;
+			border-bottom-left-radius: $border-radius-base;
+			border-bottom-right-radius: $border-radius-base;
 		}
 	}
 
@@ -111,8 +111,8 @@
 			color: $brand-white;
 			background: $brand-crimson;
 			border-bottom: 1px solid $brand-crimson;
-			border-top-left-radius: 3px;
-			border-top-right-radius: 3px;
+			border-top-left-radius: $border-radius-base;
+			border-top-right-radius: $border-radius-base;
 		}
 
 		> .panel-body {
@@ -124,11 +124,10 @@
 			color: $brand-white;
 			background: $brand-crimson;
 			border-top: 1px solid $brand-crimson;
-			border-bottom-left-radius: 3px;
-			border-bottom-right-radius: 3px;
+			border-bottom-left-radius: $border-radius-base;
+			border-bottom-right-radius: $border-radius-base;
 		}
 	}
-	ul { margin-top: 0; }
 
 	.list {
 		padding-left: 0;
