--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -1,2 +1,10 @@
 @import "../../styles/main";
 @import "nav";
+
+.doc-bottom-space {
+  margin-bottom: 25px;
+}
+
+.doc-bottom-space-large {
+  margin-bottom: 50px;
+}
