--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,8 +2,8 @@
 $brand-white: #fff !default;
 $brand-black: #4A4A4A !default; // text color, etc
 $brand-gray: #C4C4C4 !default;
-$brand-gray-lt: #DEDEDE !default;
-$brand-gray-dk: #BBBBBB !default;
+$brand-gray-lt: #F0F0F0 !default; // previously #DEDEDE
+$brand-gray-dk: #78828A !default;
 
 $brand-neutral: #647A8A !default; // awkward light blue
 // used for sidebar, darkbg, etc
