--- a/styles/components/slate.scss
+++ b/styles/components/slate.scss
@@ -1,20 +1,27 @@
 .slate {
-	border-radius : $border-radius-base;
-	background: #F0F0F0;
-	margin: 10px;
-	padding : 30px;
+	padding: 30px;
+  text-align: center;
+  color: $brand-gray-dk;
+  background: $brand-gray-lt;
+  border-radius: $border-radius-base;
 
 	&.-spacious {
-		padding: 100px 60px 120px;
+		padding: 60px;
 	}
-	&.-centered-slate {
+
+  &.-narrow {
+    width: 50%;
+  }
+
+  &.-controlled {
+    width: 35%;
+  }
+
+	&.-centered {
 		margin: 0px auto;
 	}
-	&.-half-slate {
-		width: 50%;
-	}
-	&.-tidy-background {
-		background : $brand-white;
-		border-radius: 0px;
+
+	&.-plain {
+		background: $brand-white;
 	}
 }
