--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -15,6 +15,7 @@
 @import "components/badge";
 @import "components/nav";
 @import "components/breadcrumbs";
+@import "components/form";
 @import "components/list-group";
 @import "components/panel";
 @import "components/hero";
