added margin classes

--- a/styles/components/alert.scss
+++ b/styles/components/alert.scss
@@ -1,6 +1,10 @@
+$def-margin : 5px !default;
+$large-margin : 15px;
+@mixin margin($position,$px) {
+   margin-#{$position} : $px;
+}
 .alert {
   padding: 10px 20px;
-	margin: 10px;
 	position: relative;
 	color: $brand-white;
 }
@@ -16,4 +20,17 @@
 }
 .-danger {
   background-color: $brand-crimson;
+}
+
+.doc-top-space {
+  @include margin(top,$def-margin);
+}
+.doc-top-space-large {
+  @include margin(top,$large-margin);
+}
+.doc-bottom-space {
+  @include margin(bottom,$def-margin);
+}
+.doc-bottom-space-large {
+  @include margin(bottom,$large-margin);
 }
