--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -23,6 +23,7 @@ $line-height-base: 1.7 !default;
 
 // etc base
 $border-radius-base: 3px;
+$border-radius-base2x: 6px;
 $border-radius-rounded: 25px;
 
 $tiny: 18px;
