added black color for text

--- a/styles/base/table.scss
+++ b/styles/base/table.scss
@@ -97,4 +97,5 @@ tbody > tr.-crimson { background: $brand-crimson; }
 .table-responsive {
   width: 100%;
   overflow-x: auto;
+  color: $brand-black;
 }
