--- a/styles/components/list-group.scss
+++ b/styles/components/list-group.scss
@@ -2,8 +2,7 @@
   background-color: $brand-white;
   border: 1px solid $brand-gray-dk;
   border-radius: $border-radius-base;
-  margin-bottom: 0;
-  padding-left: 0;
+  color: $brand-black;
 
   > .menuitem {
     @include link-no-underscore;
