--- a/styles/components/button.scss
+++ b/styles/components/button.scss
@@ -148,7 +148,7 @@
   }
   .btn {
     border-radius: 0px;
-    border: 1px solid #E7E7E7;
+    border: 1px solid $brand-white;
   }
   .btn:first-child {
     border-top-left-radius: $border-radius-base;
