--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -13,7 +13,7 @@ $brand-neutral-dker: #0B121F !default;
 // color variations
 $brand-blue: #4684BF !default;
 // light / neutral colors
-$brand-sky: #3A569B !default; // blue
+$brand-sky: #52B5E5 !default; // blue
 $brand-emerald: #38D4A9 !default; // primary | gren
 $brand-sun: #FFC05A !default; // yellow
 $brand-crimson: #F05F50 !default; // red
